WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69903
DFG 32_64 - fix silentFillGPR
https://bugs.webkit.org/show_bug.cgi?id=69903
Summary
DFG 32_64 - fix silentFillGPR
Yuqiang Xian
Reported
2011-10-11 22:43:22 PDT
Fix a small bug in silentFillGPR, and add the newly added DFG file to CMakeListsEfl.
Attachments
the patch
(1.82 KB, patch)
2011-10-11 22:45 PDT
,
Yuqiang Xian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuqiang Xian
Comment 1
2011-10-11 22:45:53 PDT
Created
attachment 110638
[details]
the patch
WebKit Review Bot
Comment 2
2011-10-11 23:04:54 PDT
Comment on
attachment 110638
[details]
the patch Clearing flags on attachment: 110638 Committed
r97234
: <
http://trac.webkit.org/changeset/97234
>
WebKit Review Bot
Comment 3
2011-10-11 23:04:59 PDT
All reviewed patches have been landed. Closing bug.
Gavin Barraclough
Comment 4
2011-10-11 23:11:11 PDT
Good catch! - but the silentFillGPR changes have been reverted in
r97235
due to
bug #69897
(I caused ASSERTs in the JSVALUE64 path, I'll have to investigate), when I re-land I'll make sure to incorporate your fix. cheers, G.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug