DFG 32_64 - fix silentFillGPR https://bugs.webkit.org/show_bug.cgi?id=69903

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-10-11
Reviewed by Filip Pizlo.

Fix a small bug in silentFillGPR,
and add the newly introduced DFG file to CMakeListsEfl.

* CMakeListsEfl.txt:
* dfg/DFGJITCodeGenerator.h:
(JSC::DFG::JITCodeGenerator::silentFillGPR):

Canonical link: https://commits.webkit.org/85966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97234 268f45cc-cd09-0410-ab3c-d52691b4dbfc